[project]
name = "xai-mongodb"
version = "0.1.0"
description = "A collection of Xircuits components for interfacing with MongoDB."
authors = [{ name = "XpressAI", email = "eduardo@xpress.ai" }]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/XpressAI/xai-mongodb"
keywords = ["xircuits", "database", "data processing", "mongodb"]

# Xircuits-specific configurations
[tool.xircuits]
default_example_path = "examples/mongodb-example.xircuits"
requirements_path = "requirements.txt"
